projects/compiler/test/parser/lambdas_error_badparam_nonident.out
Error at %FILE_NAME%:1:12
Unexpected token '=>':
  |  (a, "abc") => 123
                ^